--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+      <form action="???" data-turbo="false">
+      <input type="text" name="???" >
+      <input type="submit" value="ask">
+      </form>
     <%= yield %>
   </body>
 </html>
